# setuptools-gitmodules

./: README  README.md  pyproject.toml
src/setuptools_gitmodules/: __init__.py
