[project]
name = "setuptools-gitmodules"  # Required
version = "0.0.1"  # Required
description = "Dependency management via git submodules"
readme = "README.md" # Optional
requires-python = ">=3.8"
license = {file = "LICENSE.txt"}
authors = [
  { name = "Enan Ajmain", email = "enan@movandi.com" }
]

# Classifiers help users find your project by categorizing it.
#
# For a list of valid classifiers, see https://pypi.org/classifiers/
classifiers = [  # Optional
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Framework :: Setuptools Plugin",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.4",
  "Programming Language :: Python :: 3.5",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
]

dependencies = [
  "toml",
]

[build-system]
requires = ["setuptools", "wheel", "toml"]
build-backend = "setuptools.build_meta"

[project.entry-points."setuptools.finalize_distribution_options"]
setuptools_gitmodules = "setuptools_gitmodules:finalize_dist"
